force-app/main/default/objects/copado__Record_Matching_Formula__c/fields/copado__Field_1__c.field-meta.xml
<CustomField>
    <fullName>copado__Field_1__c</fullName>
    <inlineHelpText>First field in the formula</inlineHelpText>
    <label>Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>