force-app/main/default/objects/copado__Record_Matching_Formula__c/fields/copado__Field_2__c.field-meta.xml
<CustomField>
    <fullName>copado__Field_2__c</fullName>
    <inlineHelpText>Second field in the formula</inlineHelpText>
    <label>Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>