force-app/main/default/objects/copado__Record_Matching_Formula__c/fields/copado__Field_3__c.field-meta.xml
<CustomField>
    <fullName>copado__Field_3__c</fullName>
    <inlineHelpText>Third field in the formula</inlineHelpText>
    <label>Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>