force-app/main/default/objects/copado__Record_Matching_Formula__c/fields/copado__Field_Labels__c.field-meta.xml
<CustomField>
    <fullName>copado__Field_Labels__c</fullName>
    <description>This field stores labels of fields stored in the Field1, Field2, Field3</description>
    <label>Field Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>