force-app/main/default/objects/copado__Record_Matching_Formula__c/fields/copado__Object__c.field-meta.xml
<CustomField>
    <fullName>copado__Object__c</fullName>
    <description>Obsolete, use Object2__c instead</description>
    <externalId>true</externalId>
    <inlineHelpText>Select the object from the dropdown to configure the formula. The fields available for the formula are based on the selected object and source org.</inlineHelpText>
    <label>Object (Obsolete)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>