force-app/main/default/objects/copado__Record_Matching_Formula__c/validationRules/copado__RestrictSchemaCredentialModification.validationRule-meta.xml
<ValidationRule>
    <fullName>copado__RestrictSchemaCredentialModification</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISNEW()),ISCHANGED( copado__Configuration_Source_Org__c))</errorConditionFormula>
    <errorDisplayField>copado__Configuration_Source_Org__c</errorDisplayField>
    <errorMessage>You can not change the Configuration Schema Credential once the value is selected.</errorMessage>
</ValidationRule>