force-app/main/default/objects/copado__Record_Matching_Formula__c/listViews/copado__All.listView-meta.xml
<ListView>
    <fullName>copado__All</fullName>
    <columns>NAME</columns>
    <columns>copado__Object2__c</columns>
    <columns>copado__Field_1__c</columns>
    <columns>copado__Field_2__c</columns>
    <columns>copado__Field_3__c</columns>
    <columns>copado__Hash_Formula__c</columns>
    <columns>copado__Configuration_Source_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>